# bonn-motion-parser

./: README.md  new MobilityModel.ipynb  notebook.ipynb  notebookMobility.ipynb  parser.py  scenarioGenerator.cpp  scriptDisaster.pl
mobilityGenerator/: .argvparser.h.kate-swp  .main.cpp.kate-swp  .node.h.kate-swp  CMakeLists.txt  anyoption.h  main.cpp  mobilityGenerator.kdev4  mobilityModel.html  mobilityModel.ipynb  node.cc  node.h  obstacle.cc  obstacle.h  out  parameters.h
mobilityGenerator/.kdev4/: mobilityGenerator.kdev4
mobilityGenerator/html/: annotated.html  anyoption_8h_source.html  argvparser_8h_source.html  bug.html  class_any_option-members.html  class_any_option.html  class_command_line_processing_1_1_argv_parser-members.html  class_command_line_processing_1_1_argv_parser.html  class_node-members.html  class_node.html  class_obstacle-members.html  class_obstacle.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  index.html  main_8cpp.html  node_8cc.html  node_8h.html  node_8h_source.html  obstacle_8cc.html  obstacle_8h.html  obstacle_8h_source.html  pages.html  parameters_8h_source.html  struct_obstacle_1_1line_point_parameters-members.html  struct_obstacle_1_1line_point_parameters.html  struct_obstacle_1_1vertex-members.html  struct_obstacle_1_1vertex.html  struct_obstacle_1_1vertices-members.html  struct_obstacle_1_1vertices.html
mobilityGenerator/include/: anyoption.h  node.h  parameters.h  vector2D.h
mobilityGenerator/latex/: annotated.tex  bug.tex  (+14 more)
(+60 files in other folders)
